Desktop version spacing fix

--- a/styles/_home.scss
+++ b/styles/_home.scss
@@ -134,7 +134,7 @@
       font-family: "Futura";
       font-size: 22px;
       display: grid;
-  
+      row-gap: 30px;
       @media screen and (max-width: 1024px){
         text-align: center;
         margin-top: 12vw;
