--- a/styles/shul.css
+++ b/styles/shul.css
@@ -212,6 +212,7 @@
   font-size: 22px;
   display: -ms-grid;
   display: grid;
+  row-gap: 30px;
 }
 
 @media screen and (max-width: 1024px) {
